fix button wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2701,6 +2701,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
+		flex-wrap: wrap;
 		cursor: default;
 		list-style: none;
 		margin-left: -1em;
@@ -2708,7 +2709,7 @@ input, select, textarea {
 	}
 
 		ul.actions li {
-			padding: 0 0 0 1em;
+			padding: 1em 0 0 1em;
 			vertical-align: middle;
 		}
 
